[gd_scene load_steps=11 format=3 uid="uid://cwkawg6wsy6ee"]

[ext_resource type="Script" uid="uid://dqw0xu3jbwu0q" path="res://bullet.gd" id="1_v7oki"]
[ext_resource type="Material" uid="uid://c131d7f2ns7et" path="res://bullet_mat.tres" id="2_v8qja"]

[sub_resource type="SphereShape3D" id="SphereShape3D_v7oki"]
radius = 0.02

[sub_resource type="SphereMesh" id="SphereMesh_v7oki"]
material = ExtResource("2_v8qja")
radius = 0.02
height = 0.04
radial_segments = 4
rings = 2

[sub_resource type="CylinderMesh" id="CylinderMesh_v7oki"]
material = ExtResource("2_v8qja")
top_radius = 0.001
bottom_radius = 0.01
height = 0.5
rings = 2

[sub_resource type="Curve" id="Curve_v8qja"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.14335263), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_t4vbm"]
curve = SubResource("Curve_v8qja")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2b2rl"]
direction = Vector3(1, 1, 1)
spread = 180.0
initial_velocity_max = 3.0
gravity = Vector3(0, -1, 0)
scale_min = 0.0
scale_max = 0.75
scale_curve = SubResource("CurveTexture_t4vbm")
color = Color(1, 1, 0.16007765, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b7duk"]
shading_mode = 0
vertex_color_use_as_albedo = true
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_t2bd8"]
material = SubResource("StandardMaterial3D_b7duk")
size = Vector2(0.1, 0.1)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_v7oki")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_v7oki")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="BulletBody" type="Node3D" parent="."]

[node name="Bullet" type="MeshInstance3D" parent="BulletBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.00014417246)
mesh = SubResource("SphereMesh_v7oki")
skeleton = NodePath("../..")

[node name="Tracer" type="MeshInstance3D" parent="BulletBody"]
transform = Transform3D(1.9106855e-15, 4.371139e-08, 1, 1, -4.371139e-08, 0, 4.371139e-08, 1, -4.371139e-08, 0, 0, 0.25128153)
cast_shadow = 0
mesh = SubResource("CylinderMesh_v7oki")
skeleton = NodePath("../..")

[node name="End" type="GPUParticles3D" parent="."]
emitting = false
lifetime = 0.05
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_2b2rl")
draw_pass_1 = SubResource("QuadMesh_t2bd8")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
